--- a/index.html
+++ b/index.html
@@ -757,21 +757,10 @@
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
+                        <img src="/assets/img/gcp ace.png">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col s12 m6 l6">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
+                        <span class="card-title teal-text">Google Cloud Platform Associate Cloud Engineer</span>
                       </div>
                     </div>
                   </div>
