--- a/index.html
+++ b/index.html
@@ -653,22 +653,22 @@
         <!-- Languages and Databases -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Languages and Databases</h4>
+            <h4 class="brown-text light">Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/c++.png" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/c.jpeg" class="responsive-img" />C
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="/assets/img/java.png" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="/assets/img/spring-boot-logo.png" class="responsive-img" />Spring boot
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
