--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 <img alt="" src="/assets/img/c++.png" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/c.jpeg" class="responsive-img" />C
+                <img alt="" src="/assets/img/c.png" class="responsive-img" />C
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/java.png" class="responsive-img" />Java
