--- a/index.html
+++ b/index.html
@@ -679,6 +679,26 @@
 
         <div class="card">
           <div class="card-content">
+            <h4 class="brown-text light">Databases</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/big query.png" class="responsive-img" />Big Query
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/MongoDB-logo.gif" class="responsive-img" />MongoDB
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/redis.png" class="responsive-img" />Redis
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
