--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                         <img src="/assets/img/gcp ace.png">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Google Cloud Platform Associate Cloud Engineer</span>
+                        <span class="card-title teal-text" href="https://aadiiitiii.github.io/assets/resume/Aditi_Joshi_Resume.pdf">Google Cloud Platform Associate Cloud Engineer</span>
                       </div>
                     </div>
                   </div>
