--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>Pursuing
+                  <b>CGPA: </b>3.44/4.0
                 </p>
 
                 <ul>
@@ -817,7 +817,10 @@
                   <ul>
                     <li>Data Mining</li>
                     <li>Mobile Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Foundations of Algorithms</li>
+                    <li>Knowledge Representation and Reasoning</li>
+                    <li>Distributed Database Systems</li>
+                    <li>Information Assurance & Security</li>                    
                   </ul>
                   </p>
 
