--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Engineering in Computer Engineering
                   <br>
-                  <b>CGPA: </b>8.4/10
+                  <b>CGPA: </b>8.3/10
                 </p>
 
                 <ul>
@@ -884,7 +884,7 @@
           <a aria-label="Email Aditi" href="mailto:ajoshi64@asu.edu" target="_blank" data-position="top"
             data-tooltip="Email Aditi" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Aditi" href="mailto:ajoshi64@asu.edu"
-              class="hoverline">ajoshi64@asu.edu</a></a>
+              class="hoverline">ajoshi64@asu.edu / aditisjoshi14@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Aditi on GitHub" href="http://github.com/aadiiitiii" target="_blank"
