--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/IMG_5057.jpeg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/Snapseed.jpeg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -908,7 +908,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Pythonist", "Developer", "Fast Learner", "Data Engineer"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
