added panw info

--- a/index.html
+++ b/index.html
@@ -306,7 +306,38 @@
       <h3 class="page-title white-text teal">Experience</h3>
       <div class="container">
 
-        <!-- Latest Experience -->
+        <!-- PANW internship -->
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.paloaltonetworks.com/" target="_blank"><img alt="PANW logo"
+                    src="/assets/img/panw logo.svg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://www.paloaltonetworks.com/" target="_blank"
+                      class="teal-text hoverline">Palo Alto Networks</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">DevOps Engineer Intern</div>
+            <ul>
+              <li>Generated the high level and internal metrics around data and metadata which are stored for customers and provided the details to the teams within Palo Alto Networks via 2 Grafana dashboards.</li>
+              <li>Python script gathered data from 5 data sources, Grafana picked up the metrics using Prometheus which stores the time series data and then display them on the newly created dashboards. Generated 25 metrics.</li>
+              <li>Deployed the script as a Kubernetes application inside a Helm Chart.</li>
+              <li>
+                <b>Tools:</b> Python, Grafana, ElasticSearch, Consul, Vault, Kubernetes, Helm Chart, AWS, Jenkins, API Gateway, Prometheus, Prometheus Pushgateway
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>May 2022 - Aug 2022 | Santa Clara, USA</span>
+          </div>
+        </div>
+
+        <!-- Sapient MCD Japan -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -341,7 +372,7 @@
           </div>
         </div>
 
-        
+        <!-- Sapient CRDS -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -372,6 +403,7 @@
           </div>
         </div>
 
+        <!-- Sapient Training -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -403,11 +435,12 @@
           </div>
         </div>
 
+        <!-- OpenEBS -->
         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://openebs.io/" target="_blank"><img alt="Sapient logo"
+                <a href="https://openebs.io/" target="_blank"><img alt="OpenEBS logo"
                     src="/assets/img/openebs logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
@@ -431,7 +464,7 @@
       </div>
     </section>
 
-        <!-- Fourth Section: Projects -->
+    <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
