--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.paloaltonetworks.com/" target="_blank"><img alt="PANW logo"
-                    src="/assets/img/panw logo.webp" class="responsive-img center-block" /></a>
+                    src="/assets/img/panw logo.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
