added remaining courses

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>3.44/4.0
+                  <b>CGPA: </b>3.85/4.0
                 </p>
 
                 <ul>
@@ -853,7 +853,11 @@
                     <li>Foundations of Algorithms</li>
                     <li>Knowledge Representation and Reasoning</li>
                     <li>Distributed Database Systems</li>
-                    <li>Information Assurance & Security</li>                    
+                    <li>Information Assurance & Security</li>     
+                    <li>Data Visualisation </li>   
+                    <li>Semantic Web Mining</li>      
+                    <li>Software Verification, Validation and Testing</li>      
+                    <li>Introduction to Human-Computer Interaction</li>
                   </ul>
                   </p>
 
